fix a wrap

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,3 +1,6 @@
+.main-content a{
+	white-space:normal;
+}
 kbd,.kbd{
 	display: inline-block;
 	color: #363636;
